Consumo de Api Asistencia
Consumo de Api Asistencia

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="valbtnTardInasis">VER TARDANZAS E INASISTENCIAS</string>
     <string name="valMarcar">Marcar Asistencia</string>
     <string name="valCerrarSesion">Cerrar Sesión</string>
+    <string name="valtxtAsistencias">Ver Asistencias</string>
 </resources>
